Stereo drawing options visible from camera view. #62118

Closed
opened 2019-03-02 11:27:33 +01:00 by Sebastian Koenig · 3 comments

System Information
Operating system: elementaryOS 0.4.1
Graphics card: GTX 1080

Blender Version
Broken: 2.80, cf75aea218

Worked: 2.79

Short description of error
This is similar to #62115.
When you look through the camera and have Stereoscopy enabled, all the extra drawing items, that are useful in "normal" 3d viewport, are still visible in Camera View:

  • Convergence Plane
  • Convergence Plane Alpha overlay
  • Volume (3D frustrum Volume)
  • The Lens Angle widget, only that it is not being drawn in the right position.

This makes it really hard to tell what's going on.
In case of the convergence plane, the alpha overlay makes wireframe objects invisible.
The Lens Angle widget is a problem in general, I think.
While it is super useful when in perspective view, it makes no sense to draw it on top of the camera outline when looking through the camera. It is impossible to use when in camera view, and when the camera is selected it leads to flickering of the outline. Actually it flickers even more when the camera is not selected. While I would argue to not draw that widget at all when in camera view, it should at least be drawn in the correct position, if it has to be drawn.

Exact steps for others to reproduce the error
This is what the camera looks like when Stereocopy is enabled.
camera_stereo_drawing.jpeg
Note that there is actually a Bezier Circle beside the Cube, it is invisible though due to the Convergence Plane alpha overlay.
Here's a blendfile demostrating the issue.
camera_stereo_viewport_drawing.blend

**System Information** Operating system: elementaryOS 0.4.1 Graphics card: GTX 1080 **Blender Version** Broken: 2.80, cf75aea21857 Worked: 2.79 **Short description of error** This is similar to #62115. When you look through the camera and have Stereoscopy enabled, all the extra drawing items, that are useful in "normal" 3d viewport, are still visible in Camera View: - Convergence Plane - Convergence Plane Alpha overlay - Volume (3D frustrum Volume) - The Lens Angle widget, only that it is not being drawn in the right position. This makes it really hard to tell what's going on. In case of the convergence plane, the alpha overlay makes wireframe objects invisible. The Lens Angle widget is a problem in general, I think. While it is super useful when in perspective view, it makes no sense to draw it on top of the camera outline when looking through the camera. It is impossible to use when in camera view, and when the camera is selected it leads to flickering of the outline. Actually it flickers even more when the camera is not selected. While I would argue to not draw that widget at all when in camera view, it should at least be drawn in the correct position, if it has to be drawn. **Exact steps for others to reproduce the error** This is what the camera looks like when Stereocopy is enabled. ![camera_stereo_drawing.jpeg](https://archive.blender.org/developer/F6743810/camera_stereo_drawing.jpeg) Note that there is actually a Bezier Circle beside the Cube, it is invisible though due to the Convergence Plane alpha overlay. Here's a blendfile demostrating the issue. [camera_stereo_viewport_drawing.blend](https://archive.blender.org/developer/F6743833/camera_stereo_viewport_drawing.blend)
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k
Dalai Felinto was assigned by Sebastian Koenig 2019-03-02 11:27:44 +01:00

This issue was referenced by f1fef41863

This issue was referenced by f1fef41863bc42c070e431c4e65247ac5ed69ff6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62118
No description provided.