Fix T62118: Stereo drawing options visible from camera view

Note 1: Volume drawing still draws differently than 2.7x.
Note 2: Camera lens widget still ignores stereo.